--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,8 @@
     },
     "rules": {
         "@typescript-eslint/consistent-type-definitions": "off",
-        "@typescript-eslint/stric-boolean-expressions": "off"
+        "@typescript-eslint/stric-boolean-expressions": "off",
+        "array-bracket-newline": "stroustrup",
+        "implicit-arrow-linebreak":"beside"
     }
 }
