--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Clayton Inacio <tarcios.clay@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/faker": "^5.5.1",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.37",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
@@ -18,6 +19,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
+    "faker": "^5.5.3",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.4"
