--- a/package.json
+++ b/package.json
@@ -15,13 +15,26 @@
     "@types/node": "^14.14.37",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "eslint": "^7.24.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.2.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.5",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-promise": "^5.1.0",
-    "faker": "^5.5.3",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-watch": "^7.0.0",
     "jest": "^26.6.3",
+    "prettier": "^2.2.1",
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "faker": "^5.5.3"
   }
 }
